[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "strand-prefetch"
version = "0.1.0"
description = "字符级DNA信号留存 + 磁吸共振 + 虫洞展开 — 零依赖认知预取管线"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "zym15"}]
requires-python = ">=3.10"
keywords = ["dna", "resonance", "prefetch", "memory", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools.packages.find]
include = ["strand_prefetch*"]
